<resources>
    <string name="app_name">Startlines</string>
    <string name="startlines_name">Startline</string>
    <string name="funlines_name">Funline</string>
    <string name="start_button_text">Start</string>
    <string name="stop_button_text">Stop</string>
    <string name="set_time_limit_text">Set Time Limit</string>
    <string name="task_name_edit_text_hint">Enter task name</string>
    <string name="fun_mode_switch_text">Fun Mode</string>
    <string name="headphone_task_switch_text">Headphone Mode</string>
    <string name="working_until_text">Working until %1$s</string>
    <string name="manage_blocked_apps_button_text">Manage Blocked Apps</string>
    <string name="save_changes_button_text">Save</string>
    <string name="app_icon_description">App Icon</string>
    <string name="title_activity_app_blocking">AppBlockingActivity</string>
    <string name="title_activity_app_blocing_java">AppBlocingActivityJava</string>
    <string name="app_list_cancel_button_text">Cancel</string>
    <string name="app_blocking_service_description">Startline\'s App Blocking Service</string>
    <string name="distracting_apps_button_text">Manage Apps Blocked When Working</string>
    <string name="music_apps_button_text">Manage Music Apps</string>
    <string name="ip_and_port_settings_menu_button">IP and Port Settings</string>
    <string name="snooze_menu_text">Snooze</string>
    <string name="menu_select_calendar_app">Select Calendar App</string>
    <string name="manage_timeboxes_menu_text">Manage Timeboxes</string>
    <string name="set_compliance_target_menu_item">Set Compliance Target</string>
    <string name="manage_unblocked_apps_button_text">Temporarily Unblock Apps</string>
    <string name="force_startlines_text">Force Startlines</string>
    <string name="indoor_wifi_settings_menu_button">Set Indoor WiFi</string>
    <string name="calendar_mode_switch_text">Calendar Check-In Mode</string>
</resources>