<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/manage_timeboxes"
        android:title="@string/manage_timeboxes_menu_text"
        android:orderInCategory="40"
        app:showAsAction="never" />

    <item
        android:id="@+id/snooze_startlines"
        android:title="@string/snooze_menu_text"
        android:orderInCategory="30"
        app:showAsAction="never" />

    <item
        android:id="@+id/force_startlines"
        android:title="@string/force_startlines_text"
        android:orderInCategory="50"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_app_management_group"
        android:title="Manage apps"
        android:orderInCategory="100"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/manage_blocked_apps"
                android:title="@string/manage_blocked_apps_button_text"
                android:orderInCategory="100" />

            <item
                android:id="@+id/manage_distracting_apps"
                android:title="@string/distracting_apps_button_text"
                android:orderInCategory="110" />

            <item
                android:id="@+id/manage_music_apps"
                android:title="@string/music_apps_button_text"
                android:orderInCategory="120" />

            <item
                android:id="@+id/select_calendar_app"
                android:title="@string/menu_select_calendar_app"
                android:orderInCategory="130" />
        </menu>
    </item>

    <item
        android:id="@+id/manage_unblocked_apps"
        android:title="@string/manage_unblocked_apps_button_text"
        android:orderInCategory="120"
        app:showAsAction="never" />

    <item
        android:id="@+id/ip_port_settings"
        android:title="@string/ip_and_port_settings_menu_button"
        app:showAsAction="never"
        android:orderInCategory="50"
        />

    <item
        android:id="@+id/indoor_wifi_settings"
        android:title="@string/indoor_wifi_settings_menu_button"
        app:showAsAction="never"
        android:orderInCategory="50" />
    <item
        android:id="@+id/drive_mode"
        android:title="Drive Mode"
        app:showAsAction="never"
        android:orderInCategory="130" />

    <item
        android:id="@+id/toggle_auto_start"
        android:title="Toggle Autostart"
        app:showAsAction="never"
        android:orderInCategory="140" />
</menu>
