<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    <TextView
        android:id="@+id/startline_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/startlines_name"
        android:textAllCaps="true"
        app:layout_constraintEnd_toStartOf="@+id/funline_title"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/funline_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/funlines_name"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/startline_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/startline_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="0"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonsLinearLayout"
        app:layout_constraintEnd_toEndOf="@+id/startline_title"
        app:layout_constraintStart_toStartOf="@+id/startline_title"
        app:layout_constraintTop_toBottomOf="@+id/startline_title" />

    <TextView
        android:id="@+id/funline_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="0"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonsLinearLayout"
        app:layout_constraintEnd_toEndOf="@+id/funline_title"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="@+id/funline_title"
        app:layout_constraintTop_toBottomOf="@+id/funline_title"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/buttonsLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toTopOf="@+id/current_timebox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startline_status">

        <Button
            android:id="@+id/start_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/start_button_text" />

        <Button
            android:id="@+id/stop_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="@string/stop_button_text" />

        <Button
            android:id="@+id/time_limit_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_weight="1"
            android:text="@string/set_time_limit_text" />
    </LinearLayout>

    <TextView
        android:id="@+id/current_timebox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="0"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonsLinearLayout" />

    <TextView
        android:id="@+id/working_until_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/switchesLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_timebox" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/task_add_icon"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/task_name_edit_text_hint"
        app:endIconContentDescription="Save Task"
        app:endIconDrawable="@drawable/baseline_add_24"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchesLinearLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/switchesLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/working_until_text">

        <Switch
            android:id="@+id/fun_mode_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:checked="false"
            android:minHeight="48dp"
            android:text="@string/fun_mode_switch_text"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/headphone_task_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:checked="true"
            android:minHeight="48dp"
            android:text="@string/headphone_task_switch_text"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/calendar_mode_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:checked="true"
            android:minHeight="48dp"
            android:text="@string/calendar_mode_switch_text"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/todo_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationScoreText"
        tools:listitem="@layout/task_item" />

    <TextView
        android:id="@+id/complianceScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="Schedule Compliance Score: "
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_add_icon" />

    <TextView
        android:id="@+id/complianceScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="0 / 600 (0%)"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/complianceScoreText"
        app:layout_constraintTop_toTopOf="@+id/complianceScoreText" />

    <TextView
        android:id="@+id/notificationScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:text="Notification Acknowledgement:"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/complianceScore" />

    <TextView
        android:id="@+id/notificationScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="0 / 0 (0%)"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/notificationScoreText"
        app:layout_constraintTop_toTopOf="@+id/notificationScoreText" />

</androidx.constraintlayout.widget.ConstraintLayout>